# squares-rnd

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
tests/: rand.rs
